# spacy-lancedb-linker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
data/sample/: aliases.jsonl  entities.jsonl
spacy_lancedb_linker/: kb.py  linker.py  types.py
tests/: test_ann_linker.py
